--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
   <h2>🎞️ Our Church Memories</h2>
   <div class="slider-container">
     <div class="slider">
-      <img src="images/church-logo.jpg" alt="Church Logo" class="slide active" />
-      <img src="images/evangelism1.jpg" alt="Evangelism Outreach" class="slide" />
-      <img src="images/fishing_day.jpg" alt="Fishing for Souls Day" class="slide" />
+      <img src="church-logo.jpg" alt="Church Logo" class="slide active" />
+      <img src="evangelism1.jpg" alt="Evangelism Outreach" class="slide" />
+      <img src="fishing_day.jpg" alt="Fishing for Souls Day" class="slide" />
     </div>
   </div>
 </section>
