--- a/index.html
+++ b/index.html
@@ -132,22 +132,38 @@
   <h2>💝 Gifter Section</h2>
   <p>If God is leading you to support the ministry, kindly reach out via WhatsApp or Email above.</p>
 </section>
-<!-- 📚 Book Reading Section -->
-<section id="books" class="section fade-in">
-  <h2>📚 Church eBooks & Handouts</h2>
-  <p>Explore life-changing teachings and downloadable materials from our pastor and church leaders.</p>
+<!-- 📚 Book Library Section -->
+<section id="books" class="section fade-in" style="padding: 40px 20px;">
+  <h2 style="text-align: center;">📚 Church eBooks & Handouts</h2>
+  <p style="text-align: center;">Explore life-changing teachings and downloadable materials from our pastor and church leaders.</p>
 
-  <div class="book-list">
-    <div class="book-card">
-      <h3>Faith That Moves Mountains</h3>
-      <p>By Pastor Isaac T. Adeola</p>
-      <a href="books/faith-that-moves.pdf" target="_blank" class="btn">📖 Read PDF</a>
+  <div class="book-list" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
+    
+    <!-- Book 1 -->
+    <div class="book-card" style="width: 280px; border: 1px solid #ccc; padding: 15px; border-radius: 10px; background: #fff;">
+      <img src="images/all-nation-cover.png" alt="All Nation Christian University" style="width: 100%; border-radius: 6px; margin-bottom: 10px;" />
+      <h3 style="font-size: 18px;">All Nation Christian University</h3>
+      <p style="margin: 5px 0; font-weight: bold;">By Victorious Army Revival Movement Church</p>
+      <p style="font-size: 14px;">A guide to raising global Christian leaders through structured academic and spiritual training.</p>
+      <a href="books/all-nation-book.pdf" target="_blank" class="btn" style="display: inline-block; margin-top: 10px;">📥 Read PDF</a>
     </div>
-    <div class="book-card">
-      <h3>Marriage & Ministry</h3>
-      <p>By Pastor Grace Ayeni</p>
-      <a href="books/marriage-ministry.epub" target="_blank" class="btn">📘 Read eBook</a>
+
+    <!-- Book 2 -->
+    <div class="book-card" style="width: 280px; border: 1px solid #ccc; padding: 15px; border-radius: 10px; background: #fff;">
+      <h3 style="font-size: 18px;">Faith That Moves Mountains</h3>
+      <p style="margin: 5px 0; font-weight: bold;">By Pastor Isaac T. Adeola</p>
+      <a href="books/faith-that-moves.pdf" target="_blank" class="btn" style="display: inline-block; margin-top: 10px;">📖 Read PDF</a>
     </div>
+
+    <!-- Book 3 -->
+    <div class="book-card" style="width: 280px; border: 1px solid #ccc; padding: 15px; border-radius: 10px; background: #fff;">
+      <h3 style="font-size: 18px;">Marriage & Ministry</h3>
+      <p style="margin: 5px 0; font-weight: bold;">By Pastor Grace Ayeni</p>
+      <a href="books/marriage-ministry.epub" target="_blank" class="btn" style="display: inline-block; margin-top: 10px;">📘 Read eBook</a>
+    </div>
+
+    <!-- Add more books below by duplicating the book-card block -->
+    
   </div>
 </section>
 
