--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
     <h3>📢 Announcement</h3>
     <img src="images/announcement.jpg" alt="Gig Flyer" style="width:100%; border-radius:8px; margin-top:10px;">
-    <p style="margin-top:10px;">Don't miss our upcoming Revival Crusade this weekend!</p>
+    <p style="margin-top:10px;">Note!!!: Page,still under maintainance </p>
   </div>
 </div>
 
