--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <!-- 📘 Book 1 -->
     <div class="ebook-card">
-      <img src="all-nation-christian-university-1.png" alt="All Nation Christian University - 1.png" />
+      <img src="all-nation-christian-university-1.png" alt="all-nation-christian-university-1.png" />
       <h3>All Nation Christian University</h3>
       <p><strong>By:</strong> Victorious Army Revival Movement Church</p>
       <p>A guide to raising global Christian leaders through structured academic and spiritual training.</p>
