--- a/index.html
+++ b/index.html
@@ -160,16 +160,16 @@ s0.parentNode.insertBefore(s1,s0);
       <h3>All Nation Christian University</h3>
       <p><strong>By:</strong> Victorious Army Revival Movement Church</p>
       <p>A guide to raising global Christian leaders through structured academic and spiritual training.</p>
-      <a href="books/all-nation-book.pdf" target="_blank" class="ebook-btn">📥 Read PDF</a>
+      <a href="all-nation-christian-university-book.pdf" target="_blank" class="ebook-btn">📥 Read PDF</a>
     </div>
 
     <!-- 📗 Book 2 -->
     <div class="ebook-card">
-      <img src="images/faith-cover.png" alt="Faith That Moves Mountains" />
-      <h3>Faith That Moves Mountains</h3>
+      <img src="The-ministry-of-the-holyspirit.png" alt="The-ministry-of-the-holyspirit.png" />
+      <h3>The Ministry Of The HolySpirit</h3>
       <p><strong>By:</strong> Pastor Isaac T. Adeola</p>
-      <p>Faith-building guide that inspires you to believe God for the impossible and walk in spiritual authority.</p>
-      <a href="books/faith-that-moves.pdf" target="_blank" class="ebook-btn">📖 Read PDF</a>
+      <p>This book offers a deeper, Spirit-led understanding of the Holy Spirit’s work in every believer’s life—renewing hearts, guiding steps, and revealing God’s purpose.</p>
+      <a href="The-ministry-of-the-Holy-Spirit.pdf" target="_blank" class="ebook-btn">📖 Read PDF</a>
     </div>
 
     <!-- 📕 Book 3 -->
