--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ s0.parentNode.insertBefore(s1,s0);
     <!-- 📗 Book 2 -->
     <div class="ebook-card">
       <img src="The-ministry-of-the-holyspirit.png" alt="The-ministry-of-the-holyspirit.png" />
-      <h3>The Ministry Of The HolySpirit</h3>
+      <h3>THE MINISTRY OF THE HOLY SPIRIT</h3>
       <p><strong>By:</strong> Pastor Isaac T. Adeola</p>
       <p>This book offers a deeper, Spirit-led understanding of the Holy Spirit’s work in every believer’s life—renewing hearts, guiding steps, and revealing God’s purpose.</p>
       <a href="The-ministry-of-the-Holy-Spirit.pdf" target="_blank" class="ebook-btn">📖 Read PDF</a>
