--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ s0.parentNode.insertBefore(s1,s0);
 
     <!-- 📘 Book 1 -->
     <div class="ebook-card">
-      <img src="all-nation-christian-university-1.png" alt="all-nation-christian-university-1.png" />
+     <a href="all-nation-christian-university-book.pdf" target="_blank"> <img src="all-nation-christian-university-1.png" alt="all-nation-christian-university-1.png" /> </a> 
       <h3>All Nation Christian University</h3>
       <p><strong>By:</strong> Victorious Army Revival Movement Church</p>
       <p>A guide to raising global Christian leaders through structured academic and spiritual training.</p>
@@ -165,7 +165,7 @@ s0.parentNode.insertBefore(s1,s0);
 
     <!-- 📗 Book 2 -->
     <div class="ebook-card">
-      <img src="The-ministry-of-the-holyspirit.png" alt="The-ministry-of-the-holyspirit.png" />
+      <a href="The-ministry-of-the-Holy-Spirit.pdf" target="_blan"> <img src="The-ministry-of-the-holyspirit.png" alt="The-ministry-of-the-holyspirit.png" /> </a>
       <h3>THE MINISTRY OF THE HOLY SPIRIT</h3>
       <p><strong>By:</strong> Pastor Isaac T. Adeola</p>
       <p>This book offers a deeper, Spirit-led understandingealing...</p>
@@ -193,9 +193,14 @@ s0.parentNode.insertBefore(s1,s0);
 <div id="announcementPopup" class="popup">
   <div class="popup-content">
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
-    <h3>📢 Announcement</h3>
-    <img src="images/announcement.jpg" alt="Gig Flyer" style="width:100%; border-radius:8px; margin-top:10px;">
-    <p style="margin-top:10px;">Note!!!: Page,still under maintainance </p>
+    <h3>📢 WHAT DOES GOD REALLY WANT FROM US? </h3>
+    <img src="what-does-god-really-want-from-us.jpg" alt="what-does-god-really-want-from-us.jpg" style="width:100%; border-radius:8px; margin-top:10px;">
+    <p style="margin-top:10px;">for farther information contact:
+VICTORIOUS ARMY REVIVAL MOVEMENT
+(A.K.A LAND OF MERCY)
+Website: www.facebook.com/ Victorious army revival movement
+24 Olaoluwa Araromi Akesan, Lagos.
+Tel: 08169282908, 08154188630 </p>
   </div>
 </div>
 
