--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ s0.parentNode.insertBefore(s1,s0);
   <div class="popup-content">
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
     <h3>📢 WHAT DOES GOD REALLY WANT FROM US? </h3>
-    <img src="what-does-god-really-want-from-us.jpg" alt="what-does-god-really-want-from-us.jpg" style="width:100%; border-radius:8px; margin-top:10px;">
+    <img src="what-does-god-really-want-from-us.jpg" alt="what-does-god-really-want-from-us.png" style="width:100%; border-radius:8px; margin-top:10px;">
     <p style="margin-top:10px;">for farther information contact:
 VICTORIOUS ARMY REVIVAL MOVEMENT
 (A.K.A LAND OF MERCY)
