--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@ s0.parentNode.insertBefore(s1,s0);
   <div class="popup-content">
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
     <h3>📢 WHAT DOES GOD REALLY WANT FROM US? </h3>
-    <img src="flyer.png" alt="flyer.png" style="width:100%; border-radius:8px; margin-top:10px;">
-    <p style="margin-top:10px;">flyer </p>
+    <img src="flyer.png" alt="flyer.png">
+    <p>flyer </p>
   </div>
 </div>
 
