--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@ s0.parentNode.insertBefore(s1,s0);
 <div id="announcementPopup" class="popup">
   <div class="popup-content">
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
-    <h3>📢 WHAT DOES GOD REALLY WANT FROM US? </h3>
-    <img src="flyer.png" alt="flyer.png">
-    <p>flyer </p>
+    <h3>📢 WHAT DOES GOD REALLY WANT FROM US?</h3>
+    <img src="flyer.png" alt="church flyer">
+    <p style="margin-top:10px;">For further information, contact...</p>
   </div>
 </div>
 
