--- a/index.html
+++ b/index.html
@@ -189,13 +189,19 @@ s0.parentNode.insertBefore(s1,s0);
   </div>
 </section>
 
+<!-- 📢 Popup Announcement -->
 <div id="announcementPopup" class="popup">
   <div class="popup-content">
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
     <h3>📢 WHAT DOES GOD REALLY WANT FROM US?</h3>
-    <img src="flyer.png" alt="Flyer Image" />
-    <p>For further information contact:<br>
-      Victorious Army Revival Movement<br>
+    
+    <img src="flyer.png" alt="Flyer" />
+    
+    <p style="margin-top: 10px;">
+      For further information, contact:<br>
+      <strong>VICTORIOUS ARMY REVIVAL MOVEMENT</strong><br>
+      (A.K.A LAND OF MERCY)<br>
+      Website: www.facebook.com/VictoriousArmyRevivalMovement<br>
       24 Olaoluwa Araromi Akesan, Lagos.<br>
       Tel: 08169282908, 08154188630
     </p>
