--- a/index.html
+++ b/index.html
@@ -194,11 +194,9 @@ s0.parentNode.insertBefore(s1,s0);
   <div class="popup-content">
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
     <h3>📢 WHAT DOES GOD REALLY WANT FROM US?</h3>
-    
     <img src="flyer.png" alt="Flyer" />
-    
-    <p style="margin-top: 10px;">
-      For further information, contact:<br>
+    <p style="margin-top:10px;">
+      For further information contact:<br>
       <strong>VICTORIOUS ARMY REVIVAL MOVEMENT</strong><br>
       (A.K.A LAND OF MERCY)<br>
       Website: www.facebook.com/VictoriousArmyRevivalMovement<br>
