--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@ s0.parentNode.insertBefore(s1,s0);
 <div id="announcementPopup" class="popup">
   <div class="popup-content">
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
-    <h3>📢 WHAT DOES GOD REALLY WANT FROM US?</h3>
-    <img src="flyer.png" alt="Flyer" />
-    <p style="margin-top:10px;">
-      For further information contact:<br>
-      <strong>VICTORIOUS ARMY REVIVAL MOVEMENT</strong><br>
-      (A.K.A LAND OF MERCY)<br>
-      Website: www.facebook.com/VictoriousArmyRevivalMovement<br>
+    <h4>📢 WHAT DOES GOD REALLY WANT FROM US?</h4>
+    <img src="flyer.png" alt="Flyer Announcement">
+    <p style="font-size: 14px; margin-top: 10px;">
+      For further info:<br>
+      <strong>Victorious Army Revival Movement</strong><br>
+      (A.K.A Land of Mercy)<br>
+      facebook.com/VictoriousArmyRevivalMovement<br>
       24 Olaoluwa Araromi Akesan, Lagos.<br>
       Tel: 08169282908, 08154188630
     </p>
