--- a/index.html
+++ b/index.html
@@ -195,14 +195,7 @@ s0.parentNode.insertBefore(s1,s0);
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
     <h4>📢 WHAT DOES GOD REALLY WANT FROM US?</h4>
     <img src="flyer.png" alt="Flyer Announcement">
-    <p style="font-size: 14px; margin-top: 10px;">
-      For further info:<br>
-      <strong>Victorious Army Revival Movement</strong><br>
-      (A.K.A Land of Mercy)<br>
-      facebook.com/VictoriousArmyRevivalMovement<br>
-      24 Olaoluwa Araromi Akesan, Lagos.<br>
-      Tel: 08169282908, 08154188630
-    </p>
+    <p style="font-size: 14px; margin-top: 10px;"> flyer</p>
   </div>
 </div>
 
