--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ s0.parentNode.insertBefore(s1,s0);
   <div class="popup-content">
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
     <h4>📢 WHAT DOES GOD REALLY WANT FROM US?</h4>
-    <img src="flyer.png" alt="Flyer Announcement">
+    <img src="flyer55.png" alt="Flyer Announcement">
     <p style="font-size: 14px; margin-top: 10px;"> flyer</p>
   </div>
 </div>
