--- a/index.html
+++ b/index.html
@@ -184,21 +184,24 @@ s0.parentNode.insertBefore(s1,s0);
   </div>
 </section>
 
-    <!-- Add more books below by duplicating the book-card block -->
-    
+   <!-- Add more books below by duplicating the book-card block -->    
   </div>
 </section>
+  
 
+  
 <!-- 📢 Popup Announcement -->
 <div id="announcementPopup" class="popup">
   <div class="popup-content">
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
-    <h4>📢 WHAT DOES GOD REALLY WANT FROM US?</h4>
-    <img src="flyer55.png" alt="Flyer Announcement">
-    <p style="font-size: 14px; margin-top: 10px;"> flyer</p>
+    <h3>📢 Announcement</h3>
+    <img src="images/announcement.jpg" alt="Gig Flyer" style="width:100%; border-radius:8px; margin-top:10px;">
+    <p style="margin-top:10px;">Don't miss our upcoming Revival Crusade this weekend!</p>
   </div>
 </div>
 
+
+  
 <footer>
   <p>&copy; 2025 Victorious Army Revival Movement. Built for the Kingdom.</p>
 </footer>
