--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ s0.parentNode.insertBefore(s1,s0);
   <div class="popup-content">
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
     <h3>📢 Announcement</h3>
-    <img src="images/announcement.jpg" alt="Gig Flyer" style="width:100%; border-radius:8px; margin-top:10px;">
+    <img src="flyer.png" alt="Gig Flyer" style="width:100%; border-radius:8px; margin-top:10px;">
     <p style="margin-top:10px;">Don't miss our upcoming Revival Crusade this weekend!</p>
   </div>
 </div>
