--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@ s0.parentNode.insertBefore(s1,s0);
       <a href="chrismas-jesus-light.pdf" target="_blan"> <img src="chrismas-jesus-the-true-light-cover.png" alt="chrismas-jesus-the-true-light-cover.png" /> </a>
       <h3>CHRISTMAS: JESUS THE TRUE LIGHT OF CHRISTMAS</h3>
       <p><strong>By:</strong> Pastor Isaac T. Adeola</p>
-      <p>This book offers a deeper, Spirit-led understandingealing...</p>
-      <a href="The-ministry-of-the-Holy-Spirit.pdf" target="_blank" class="ebook-btn">📖 Read PDF</a>
+      <p>Let Jesus, the true Light, shine fully in you today...</p>
+      <a href="chrismas-jesus-light.pdf" target="_blank" class="ebook-btn">📖 Read PDF</a>
     </div>
 
 
@@ -190,7 +190,7 @@ s0.parentNode.insertBefore(s1,s0);
       <a href="commit-faithffully-to-sound-doctrine.pdf" target="_blan"> <img src="commit-faithfully-cover.png" alt="commit-faithfully-cover.png" /> </a>
       <h3>COMMIT FAITHFULLY TO SOUND DOCTRINE</h3>
       <p><strong>By:</strong> Pastor Isaac T. Adeola</p>
-      <p>This book offers a deeper, Spirit-led understandingealing...</p>
+      <p>Remain loyal to true gospel teaching with faith, obedience, and love...</p>
       <a href="commit-faithffully-to-sound-doctrine.pdf" target="_blank" class="ebook-btn">📖 Read PDF</a>
     </div>
     
@@ -201,7 +201,7 @@ s0.parentNode.insertBefore(s1,s0);
       <a href="godly-fear-ebook.pdf" target="_blan"> <img src="Godly-Fear-cover.png.png" alt="Godly-Fear-cover.png.png" /> </a>
       <h3>GODLY FEAR</h3>
       <p><strong>By:</strong> Pastor Isaac T. Adeola</p>
-      <p>This book offers a deeper, Spirit-led understandingealing...</p>
+      <p>This book reveals how true reverence for God transforms lives...</p>
       <a href="godly-fear-ebook.pdf" target="_blank" class="ebook-btn">📖 Read PDF</a>
     </div>
 
@@ -211,7 +211,7 @@ s0.parentNode.insertBefore(s1,s0);
       <a href="first-fruit-seed.pdf" target="_blan"> <img src="first-fruit-seed.PNG" alt="first-fruit-seed.PNG" /> </a>
       <h3>FIRST FRUIT SEED</h3>
       <p><strong>By:</strong> Pastor Isaac T. Adeola</p>
-      <p>This book offers a deeper, Spirit-led understandingealing...</p>
+      <p>Give God your best first, and unlock divine abundance...</p>
       <a href="first-fruit-seed.pdf" target="_blank" class="ebook-btn">📖 Read PDF</a>
     </div>
     
@@ -220,7 +220,7 @@ s0.parentNode.insertBefore(s1,s0);
       <a href="power-of-holiness-ebook.pdf" target="_blan"> <img src="power-of-holiness-cover.png.png" alt="power-of-holiness-cover.png.png" /> </a>
       <h3>POWER OF HOLINESS</h3>
       <p><strong>By:</strong> Pastor Isaac T. Adeola</p>
-      <p>This book offers a deeper, Spirit-led understandingealing...</p>
+      <p>True holiness releases God's power, presence, protection, and lasting impact...</p>
       <a href="power-of-holiness-ebook.pdf" target="_blank" class="ebook-btn">📖 Read PDF</a>
     </div>
 
@@ -229,9 +229,9 @@ s0.parentNode.insertBefore(s1,s0);
  <!-- 📗 Book 8 -->
     <div class="ebook-card">
       <a href="seek-first-the-kingdom-of-god.pdf" target="_blan"> <img src="Sunsets.png.png" alt="Sunsets.png.png" /> </a>
-      <h3>THE MINISTRY OF THE HOLY SPIRIT</h3>
+      <h3>SEEK FIRST THE KINGDOM OF GOD</h3>
       <p><strong>By:</strong> Pastor Isaac T. Adeola</p>
-      <p>This book offers a deeper, Spirit-led understandingealing...</p>
+      <p>Prioritising God's kingdom leads to divine provision, peace, purpose...</p>
       <a href="seek-first-the-kingdom-of-god.pdf" target="_blank" class="ebook-btn">📖 Read PDF</a>
     </div>
 
