--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ s0.parentNode.insertBefore(s1,s0);
 
  <!-- 📗 Book 8 -->
     <div class="ebook-card">
-      <a href="seek-first-the-kingdom-of-god.pdf" target="_blan"> <img src="Sunsets.png.png" alt="Sunsets.png.png" /> </a>
+      <a href="seek-first-the-kingdom-of-god.pdf" target="_blan"> <img src="see-the-kingdom.png.PNG" alt="see-the-kingdom.png.PNG" /> </a>
       <h3>SEEK FIRST THE KINGDOM OF GOD</h3>
       <p><strong>By:</strong> Pastor Isaac T. Adeola</p>
       <p>Prioritising God's kingdom leads to divine provision, peace, purpose...</p>
