--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ s0.parentNode.insertBefore(s1,s0);
   <h2>🎞️ Our Church Memories</h2>
   <div class="slider-container">
     <div class="slider">
-      <img src="church-logo.jpg" alt="Church Logo" class="slide active" />
+      <img src="church-logo.png" alt="Church Logo" class="slide active" />
       <img src="evangelism1.jpg" alt="Evangelism Outreach" class="slide" />
       <img src="fishing_day.jpg" alt="Fishing for Souls Day" class="slide" />
     </div>
