--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@ s0.parentNode.insertBefore(s1,s0);
   <div class="popup-content">
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
     <h3>📢 Announcement</h3>
-    <img src="flyer.png" alt="Gig Flyer" style="width:100%; border-radius:8px; margin-top:10px;">
-    <p style="margin-top:10px;">!</p>
+    <img src="flyer.png" alt="Gig Flyer">
+    <p style="margin-top:10px;">Welcome!!!</p>
   </div>
 </div>
 
