--- a/index.html
+++ b/index.html
@@ -250,11 +250,10 @@ s0.parentNode.insertBefore(s1,s0);
   <div class="popup-content">
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
     <h3>📢 Announcement</h3>
-    <img src="flyer.png" alt="Gig Flyer">
-    <p style="margin-top:10px;">Welcome!!!</p>
+    <img src="flyer.png" alt="Gig Flyer" class="popup-image">
+    <p class="popup-message">!</p>
   </div>
 </div>
-
 
   
 <footer>
