--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ s0.parentNode.insertBefore(s1,s0);
 </nav>
 
 <header class="hero fade-in">
-  <h1>Victorious Army Revival Movement (AKA Land of Mercy)</h1>
+  <h1 class="pulse">Victorious Army Revival Movement (AKA Land of Mercy)</h1>
   <p class="tagline">“Where the weary are at rest – Job 3:17”</p>
 </header>
 
