--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@ s0.parentNode.insertBefore(s1,s0);
   <div class="popup-content">
     <span class="close-btn" onclick="document.getElementById('announcementPopup').style.display='none'">&times;</span>
     <h3>📢 Announcement</h3>
-    <img src="flyer.png" alt="Gig Flyer" class="popup-image">
-    <p class="popup-message">!</p>
+    <img src="flyer.png" alt="" class="popup-image">
+    <p class="PAGE UNDER MAINTENANCE">!</p>
   </div>
 </div>
 
